# serverless-flask-app

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
docs/source/: conf.py  flaskapp.rst  tests.integration_tests.rst
flaskapp/: __init__.py  config.py  csv_handler.py  routes.py
flaskapp/static/csv/: trade_sample_1.csv  trade_sample_2.csv  trade_sample_3.csv
tests/: conftest.py  test_csv.py
tests/integration_tests/: test_csv.py
tests/unit_tests/: test_get_files.py
