[tool.poetry]
name = "essentia-analytics"
version = "0.1.0"
description = ""
authors = ["Stefan Andronic <stefan.and89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0"
python-dotenv = "^0.19.2"
pytest = "^6.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
